src/main/java/com/example/Demo/errors/exception/users/AdminException.java
package com.example.Demo.errors.exception.users;

public class AdminException extends RuntimeException {
    public AdminException(String message) {
        super(message);
    }
}
